fixed white space under operators

--- a/src/components/Calculator.scss
+++ b/src/components/Calculator.scss
@@ -18,6 +18,8 @@
     width: 100%;
     height: 100%;
     font-size: 40px;
+    margin: 0;
+    padding: 0;
     &:focus {
       outline: none;
     }
